feat: ui base teacher